# Librall

./: README.md  makerun.sh  run.sh
src/: ButtonPanelArea.cpp  ButtonPanelArea.h  CMakeLists.txt  ConsoleArea.cpp  ConsoleArea.h  GameOfLifeArea.cpp  GameOfLifeArea.h  Logger.cpp  Logger.h  MainAreaSection.cpp  MainAreaSection.h  MainWindow.cpp  MainWindow.h  ModeTabBar.cpp  UIMode.h  main.cpp
src/core/: CMakeLists.txt  ISubprogram.h  SubprogramBase.h  SubprogramManager.cpp  SubprogramManager.h  UIMode.h
src/logic/: CMakeLists.txt  ConsoleArea.cpp  GameOfLife.cpp  GameOfLife.h  MainAreaSection.cpp  MainAreaSection.h  SortAlgsComp.cpp  SortAlgsComp.h
src/subprograms/console/: CMakeLists.txt  ConsoleArea.cpp  ConsoleArea.h  ConsoleLoggerClient.cpp  ConsoleLoggerClient.h  ConsoleProgram.cpp  ConsoleProgram.h  SortAlgsComp.h
src/subprograms/database_tool/: CMakeLists.txt  DatabaseTest.cpp  DatabaseTest.h
src/subprograms/game_of_life/: CMakeLists.txt  GameOfLifeLogic.cpp  GameOfLifeLogic.h  GameOfLifeProgram.cpp  GameOfLifeProgram.h  GameOfLifeView.cpp  GameOfLifeView.h
src/subprograms/paint/: CMakeLists.txt  DrawMode.h  PaintCanvas.cpp  PaintCanvas.h  PaintProgram.cpp  PaintProgram.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ModeTabBar.h  SidePanelArea.cpp  SidePanelArea.h
src/util/: CMakeLists.txt  ILoggerClient.h  Logger.cpp  Logger.h  ParallelSortAlgs.cpp  ParallelSortAlgs.h  Random.cpp  Random.h  SortAlgs.cpp  SortAlgs.h  Timer.cpp  Timer.h  VectorUtil.cpp  VectorUtil.h
